--- a/blog/package.json
+++ b/blog/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "bower": "^1.5.3",
     "gulp": "^3.9.0",
-    "node-sass": "^3.3.3",
+    "node-sass": "^3.3.3"
 
   },
   "devDependencies": {},
